crates/ruff_python_whitespace/src/snapshots/ruff_python_whitespace__tokenizer__tests__tokenize_comma.snap
---
source: crates/ruff_python_whitespace/src/tokenizer.rs
expression: test_case.tokens()
---
[
    Token {
        kind: Comma,
        range: 0..1,
    },
    Token {
        kind: Comma,
        range: 1..2,
    },
    Token {
        kind: Comma,
        range: 2..3,
    },
    Token {
        kind: Comma,
        range: 3..4,
    },
]
