crates/ruff_python_whitespace/src/snapshots/ruff_python_whitespace__tokenizer__tests__tokenize_continuation.snap
---
source: crates/ruff_python_whitespace/src/tokenizer.rs
expression: test_case.tokens()
---
[
    Token {
        kind: LParen,
        range: 0..1,
    },
    Token {
        kind: Whitespace,
        range: 1..2,
    },
    Token {
        kind: Continuation,
        range: 2..3,
    },
    Token {
        kind: Newline,
        range: 3..4,
    },
    Token {
        kind: Whitespace,
        range: 4..5,
    },
    Token {
        kind: RParen,
        range: 5..6,
    },
]
