crates/ruff_python_whitespace/src/snapshots/ruff_python_whitespace__tokenizer__tests__tokenize_multichar.snap
---
source: crates/ruff_python_whitespace/src/tokenizer.rs
expression: test_case.tokens()
---
[
    Token {
        kind: If,
        range: 0..2,
    },
    Token {
        kind: Whitespace,
        range: 2..3,
    },
    Token {
        kind: In,
        range: 3..5,
    },
    Token {
        kind: Whitespace,
        range: 5..6,
    },
    Token {
        kind: Else,
        range: 6..10,
    },
    Token {
        kind: Whitespace,
        range: 10..11,
    },
    Token {
        kind: Match,
        range: 11..16,
    },
]
