crates/ruff_python_whitespace/src/snapshots/ruff_python_whitespace__tokenizer__tests__tokenize_parentheses.snap
---
source: crates/ruff_python_whitespace/src/tokenizer.rs
expression: test_case.tokens()
---
[
    Token {
        kind: LParen,
        range: 0..1,
    },
    Token {
        kind: LBracket,
        range: 1..2,
    },
    Token {
        kind: LBrace,
        range: 2..3,
    },
    Token {
        kind: RBrace,
        range: 3..4,
    },
    Token {
        kind: RBracket,
        range: 4..5,
    },
    Token {
        kind: RParen,
        range: 5..6,
    },
]
