crates/ruff_python_whitespace/src/snapshots/ruff_python_whitespace__tokenizer__tests__tokenize_substring.snap
---
source: crates/ruff_python_whitespace/src/tokenizer.rs
expression: test_case.tokens()
---
[
    Token {
        kind: RParen,
        range: 14..15,
    },
    Token {
        kind: Whitespace,
        range: 15..16,
    },
    Token {
        kind: Comment,
        range: 16..25,
    },
]
