crates/ruff_python_whitespace/src/snapshots/ruff_python_whitespace__tokenizer__tests__tokenize_trivia.snap
---
source: crates/ruff_python_whitespace/src/tokenizer.rs
expression: test_case.tokens()
---
[
    Token {
        kind: Comment,
        range: 0..9,
    },
    Token {
        kind: Newline,
        range: 9..10,
    },
    Token {
        kind: Whitespace,
        range: 10..14,
    },
    Token {
        kind: Comment,
        range: 14..23,
    },
]
